--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 /[Mm]emoryCaptures/
 /[Uu]ser[Ss]ettings/
 
+[Aa]ssets/XR/XRGeneralSettingsPerBuildTarget.asset
+
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
