--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,6 @@
 /[Mm]emoryCaptures/
 /[Uu]ser[Ss]ettings/
 
-[Aa]ssets/XR/XRGeneralSettingsPerBuildTarget.asset
-
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
@@ -61,3 +59,4 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+Assets/XR/XRGeneralSettingsPerBuildTarget.asset
