--- a/.gitignore
+++ b/.gitignore
@@ -460,3 +460,7 @@ project_BackUpThisFolder_ButDontShipItWithYourGame/Managed/UnityEngine.VRModule.
 project_BackUpThisFolder_ButDontShipItWithYourGame/Managed/UnityEngine.XRModule.dll
 project_BackUpThisFolder_ButDontShipItWithYourGame/Managed/UnityLinkerToEditorData.json
 project_BurstDebugInformation_DoNotShip/tempburstlibs/arm64-v8a/lib_burst_generated.txt
+Assets/Imports/TextMesh Pro/Examples & Extras/Resources/Fonts & Materials/Anton SDF.asset
+Assets/Imports/TextMesh Pro/Examples & Extras/Resources/Fonts & Materials/Bangers SDF.asset
+Assets/Imports/TextMesh Pro/Examples & Extras/Resources/Fonts & Materials/Anton SDF.asset
+Assets/Imports/TextMesh Pro/Examples & Extras/Resources/Fonts & Materials/Bangers SDF.asset
