--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ sysinfo.txt
 crashlytics-build.properties
 
 Assets/XR/XRGeneralSettingsPerBuildTarget.asset
+mono_crash.319791a23.0.json
+mono_crash.319791a23.1.json
